--- a/bookreviews.html
+++ b/bookreviews.html
@@ -135,6 +135,7 @@
 #more10 {display: none;}  
 #more11 {display: none;} 
 #more12 {display: none;} 
+#more13 {display: none;} 
 
   
 .buttonreadmore {
@@ -149,6 +150,7 @@
   margin: 4px 2px;
   cursor: pointer;
 }  
+  
   
 .containerimg {
   position: relative;
@@ -306,6 +308,41 @@ environemnt and quality.
 <div class="main">
   <center>
 	<div class="containerimg">
+      <img src="imgs/chinu.jpeg" style="width:125px;height:125px;">
+<div class="inbox">
+  <img src="imgs/blubg.jpg" style="width:125px;height:35px;">
+  <div class="centered"><h5>Chinmaya <br>Dharmadhikari</h5></div>
+</div>
+  </div>
+</div>
+	  </center>
+		<center><h4>Book - <u>Playing It My Way</u><br>by Sachin Tendulkar and B. Majumdar</h4></center>
+      <p>"Playing It My Way" is the autobiography of Sachin Tendulkar. It describes Sachin's 24 years of 
+	  journey between those
+	  <span id="dots11">...</span><span id="more11">
+	22 yards. The book contains 28 chapters which cover Sachin's journey from his childhood to his
+	last test series against the West Indies. The book gives an insight on Sachin's family life, his
+	struggle, overcoming his injuries. The book also explains about other cricketers who played with Sachin.
+The narrative starts from Sachin's childhood and travels through his glorious moments in his cricketing
+ career. The book also  highlights some of the low points in Tendulkar's career where majorly he describes
+ the feeling of losing a test match against west Indies(Port of Spain) where target was just 120 runs, the
+ 2007 world cup debacle, tennis elbow injury. The book encourages the reader to understand with what 
+ mindset Sachin Tendulkar played and how he overcame his short comings. In series against Australia in
+ Australia Sachin got out many times playing the cover drive and then came the famous knock of 241 runs
+ without playing a cover drive, knock against Kenya where he lost his father before that match. 
+ The book also contains some good photos from his collection. The book is not only meant for the 
+ cricket-loving people of the world. After reading the book, the reader understands that complete 
+ devotion and firm determination can take a man to the pinnacle of glory.
+
+	  </span></p><button class ="buttonreadmore" onclick="myFunction11()" id="myBtn11">Read more</button>
+
+ <hr style="height:1px;border-width:0;background-color:#9DD9F3">
+<br>
+
+
+<div class="main">
+  <center>
+	<div class="containerimg">
       <img src="imgs/antriksh.jpeg" style="width:125px;height:125px;">
 	 <div class="inbox">
   <img src="imgs/blubg.jpg" style="width:125px;height:25px;">
@@ -331,39 +368,6 @@ environemnt and quality.
 
 <hr style="height:1px;border-width:0;background-color:#9DD9F3">
 <br>
-
-   <div class="main">
-  <center>
-	<div class="containerimg">
-      <img src="imgs/raksha.jpg" style="width:125px;height:125px;">
-	  <div class="inbox">
-  <img src="imgs/blubg.jpg" style="width:125px;height:25px;">
-  <div class="centered"><h5>Raksha</h5></div>
-</div>
-  </div>
-</div>
-	  </center>
-	  <center><h4>Book - <u>The Hate U Give</u><br>by Angie Thomas</h4></center>
-      <p>To summarize the story I think the simplest 
-	  slogan I could use is "Black Lives Matter", released before the quote became a global movement
-	  that <span id="dots5">...</span><span id="more5">questioned racism in all its forms, “The Hate U give“ came with a much more direct and 
-	  heartfelt perspective into what it actually feels like to be a witness and victim of police 
-	  brutality due to race/colour of skin.
-The protagonist of this young adult story is a very real sixteen-year-old girl who was just trying
- to juggle her two lives; one as part of her hood where she could be who she truly was and the other 
- in her all-white high school where she was one of them. So, when her childhood best friend is shot
- to death by a white police officer for ‘doing nothing’ her life comes tumbling down to the reality 
- of what it actually is like to be a ‘Black Person’.
-Her story for justice is a real one rather than heroic as she herself stumbles to find the courage 
-to fight, but it moves us all to see the reality of the so called 21st century America and the
- root for why ‘Black Lives Matter’ wasn’t just a simple quote or hashtag but a global awakening 
- call to all still bound by ideas of race and white supremacy. 
-	  </span></p><button class ="buttonreadmore" onclick="myFunction5()" id="myBtn5">Read more</button>
-    
-
-<hr style="height:1px;border-width:0;background-color:#9DD9F3">
-<br>
-
 
 <div class="main">
   <center>
@@ -402,6 +406,40 @@ to fight, but it moves us all to see the reality of the so called 21st century A
 <hr style="height:1px;border-width:0;background-color:#9DD9F3">
 <br>
   
+   <div class="main">
+  <center>
+	<div class="containerimg">
+      <img src="imgs/raksha.jpg" style="width:125px;height:125px;">
+	  <div class="inbox">
+  <img src="imgs/blubg.jpg" style="width:125px;height:25px;">
+  <div class="centered"><h5>Raksha</h5></div>
+</div>
+  </div>
+</div>
+	  </center>
+	  <center><h4>Book - <u>The Hate U Give</u><br>by Angie Thomas</h4></center>
+      <p>To summarize the story I think the simplest 
+	  slogan I could use is "Black Lives Matter", released before the quote became a global movement
+	  that <span id="dots5">...</span><span id="more5">questioned racism in all its forms, “The Hate U give“ came with a much more direct and 
+	  heartfelt perspective into what it actually feels like to be a witness and victim of police 
+	  brutality due to race/colour of skin.
+The protagonist of this young adult story is a very real sixteen-year-old girl who was just trying
+ to juggle her two lives; one as part of her hood where she could be who she truly was and the other 
+ in her all-white high school where she was one of them. So, when her childhood best friend is shot
+ to death by a white police officer for ‘doing nothing’ her life comes tumbling down to the reality 
+ of what it actually is like to be a ‘Black Person’.
+Her story for justice is a real one rather than heroic as she herself stumbles to find the courage 
+to fight, but it moves us all to see the reality of the so called 21st century America and the
+ root for why ‘Black Lives Matter’ wasn’t just a simple quote or hashtag but a global awakening 
+ call to all still bound by ideas of race and white supremacy. 
+	  </span></p><button class ="buttonreadmore" onclick="myFunction5()" id="myBtn5">Read more</button>
+    
+
+<hr style="height:1px;border-width:0;background-color:#9DD9F3">
+<br>
+
+  
+  
 <div class="main">
 <center>
 	<div class="containerimg">
@@ -435,41 +473,6 @@ outdone herself with this trilogy and a very recent addition of the trilogy’s 
 <hr style="height:1px;border-width:0;background-color:#9DD9F3">
 <br>
 
-
-<div class="main">
-  <center>
-	<div class="containerimg">
-      <img src="imgs/chinu.jpeg" style="width:125px;height:125px;">
-<div class="inbox">
-  <img src="imgs/blubg.jpg" style="width:125px;height:35px;">
-  <div class="centered"><h5>Chinmaya <br>Dharmadhikari</h5></div>
-</div>
-  </div>
-</div>
-	  </center>
-		<center><h4>Book - <u>Playing It My Way</u><br>by Sachin Tendulkar and B. Majumdar</h4></center>
-      <p>"Playing It My Way" is the autobiography of Sachin Tendulkar. It describes Sachin's 24 years of 
-	  journey between those
-	  <span id="dots11">...</span><span id="more11">
-	22 yards. The book contains 28 chapters which cover Sachin's journey from his childhood to his
-	last test series against the West Indies. The book gives an insight on Sachin's family life, his
-	struggle, overcoming his injuries. The book also explains about other cricketers who played with Sachin.
-The narrative starts from Sachin's childhood and travels through his glorious moments in his cricketing
- career. The book also  highlights some of the low points in Tendulkar's career where majorly he describes
- the feeling of losing a test match against west Indies(Port of Spain) where target was just 120 runs, the
- 2007 world cup debacle, tennis elbow injury. The book encourages the reader to understand with what 
- mindset Sachin Tendulkar played and how he overcame his short comings. In series against Australia in
- Australia Sachin got out many times playing the cover drive and then came the famous knock of 241 runs
- without playing a cover drive, knock against Kenya where he lost his father before that match. 
- The book also contains some good photos from his collection. The book is not only meant for the 
- cricket-loving people of the world. After reading the book, the reader understands that complete 
- devotion and firm determination can take a man to the pinnacle of glory.
-
-	  </span></p><button class ="buttonreadmore" onclick="myFunction11()" id="myBtn11">Read more</button>
-
- <hr style="height:1px;border-width:0;background-color:#9DD9F3">
-<br>
-
  
  <div class="main">
   <center>
@@ -493,8 +496,27 @@ The narrative starts from Sachin's childhood and travels through his glorious mo
  <hr style="height:1px;border-width:0;background-color:#9DD9F3">
 <br>
 
+ <div class="main">
+  <center>
+	<div class="containerimg">
+      <img src="imgs/adi.jfif" style="width:125px;height:125px;">
+<div class="inbox">
+  <img src="imgs/blubg.jpg" style="width:125px;height:25px;">
+  <div class="centered"><h5>Aadil Chheda</h5></div>
+</div>
+  </div>
+</div>
+	  </center>
+		<center><h4>Book - <u>Rich Dad Poor Dad</u><br>by Robert Kiyosaki and S. Lechter</h4></center>
+      <p>In this book, Rich dad Poor dad, Robert Kiyosaki talks about his two dads; one his biological and 
+	  <span id="dots13">...</span><span id="more13">
+ other his friends dad. He considers his father as poor dad because he works on a 9-5 job and has only one source of income. While his friends dad is considered a rich because he makes money from multiple sources and  makes money work for him, even though he is a college dropout. 
+This book teaches a very important part of living that everyone should understand i.e. financial literacy. As in our education system we are never taught investments and how to multiply our assets by investing it and taking calculated risks.
 
+	  </span></p><button class ="buttonreadmore" onclick="myFunction13()" id="myBtn13">Read more</button>
 
+ <hr style="height:1px;border-width:0;background-color:#9DD9F3">
+<br>
 
  <div class="main">
   <center>
@@ -630,6 +652,8 @@ divided into chapters and each one is interconnected by another.
 	<i class="fa fa-twitter-square fa-2x social" style="color: #262626"></i></a>  
     <a href="https://www.linkedin.com/in/sarveshwinsome/" target="_blank">
 	<i class="fa fa-linkedin-square fa-2x social" style="color: #262626"></i></a>
+	<a href="https://medium.com/@saarveshannyy" target="_blank">
+	<i class="fa fa-medium fa-2x social" style="color: #262626"></i></a>
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
@@ -845,6 +869,22 @@ function myFunction12() {
   var dots = document.getElementById("dots12");
   var moreText = document.getElementById("more12");
   var btnText = document.getElementById("myBtn12");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+
+function myFunction13() {
+  var dots = document.getElementById("dots13");
+  var moreText = document.getElementById("more13");
+  var btnText = document.getElementById("myBtn13");
 
   if (dots.style.display === "none") {
     dots.style.display = "inline";
