--- a/bookreviews.html
+++ b/bookreviews.html
@@ -510,8 +510,10 @@ outdone herself with this trilogy and a very recent addition of the trilogy’s 
 		<center><h4>Book - <u>Rich Dad Poor Dad</u><br>by Robert Kiyosaki and S. Lechter</h4></center>
       <p>In this book, Rich dad Poor dad, Robert Kiyosaki talks about his two dads; one his biological and 
 	  <span id="dots13">...</span><span id="more13">
- other his friends dad. He considers his father as poor dad because he works on a 9-5 job and has only one source of income. While his friends dad is considered a rich because he makes money from multiple sources and  makes money work for him, even though he is a college dropout. 
-This book teaches a very important part of living that everyone should understand i.e. financial literacy. As in our education system we are never taught investments and how to multiply our assets by investing it and taking calculated risks.
+ other his friends dad. He considers his father as poor dad because he works on a 9-5 job and has only one source of income. While his friends' dad is 
+	      considered a rich because he makes money from multiple sources and  makes money work for him, even though he is a college dropout. 
+This book teaches a very important part of living that everyone should understand i.e. financial literacy. As in our education system we are never taught 
+	      investments and how to multiply our assets by investing it and taking calculated risks.
 
 	  </span></p><button class ="buttonreadmore" onclick="myFunction13()" id="myBtn13">Read more</button>
 
