--- a/QandT.html
+++ b/QandT.html
@@ -220,6 +220,26 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
+		<br><div class="containerimg">
+      <img src="imgs/12.jpg" style="width:300px;height:300px;">
+  </div>
+    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	
+		<br><div class="containerimg">
+      <img src="imgs/13.jpg" style="width:300px;height:300px;">
+  </div>
+    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	
+		<br><div class="containerimg">
+      <img src="imgs/14.jpg" style="width:300px;height:300px;">
+  </div>
+    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	
+		<br><div class="containerimg">
+      <img src="imgs/15.jpg" style="width:300px;height:300px;">
+  </div>
+    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	
   </div>
 </div>
 </center>
