--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ img {vertical-align: middle;}
 	all the unsuccessful stories; meanwhile in the process, <br>
 	<b> A LITTLE WARRIOR WAS MADE.</b><br>
 	
-	<div style="background-color: #fbf9ea"><b><center>
+	<div style="background-color: #f3edbf"><b><center>
 	We encourage you to send your content in course of 
 	book reviews and articles. We'll post them for you. On a light note, we would be highly obliged 
 	if you could send some positive and inspiring content; sharing some influential lines may motivate our readers.
