--- a/articles.html
+++ b/articles.html
@@ -172,7 +172,7 @@ img.a {
  
   <div class="header-right">
     <a href="index.html">Home</a>
-	<a href="QandT.html">Quotes and Thoughts</a>
+	<a href="quotesthoughts.html">Quotes and Thoughts</a>
 	<a href="bookreviews.html">Book Reviews</a>
     <a class="active" href="articles.html">Articles</a>
     <a href="profile.html">Profile</a>
