--- a/bookreviews.html
+++ b/bookreviews.html
@@ -200,7 +200,7 @@ img.a {
  
   <div class="header-right">
     <a href="index.html">Home</a>
-	<a href="QandT.html">Quotes and Thoughts</a>
+	<a href="quotesthoughts.html">Quotes and Thoughts</a>
 	<a class="active" href="bookreviews.html">Book Reviews</a>
     <a href="articles.html">Articles</a>
     <a href="profile.html">Profile</a>
