--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ img {vertical-align: middle;}
   <div class="header-right">
  
     <a class="active" href="index.html">Home</a>
-	<a href="QandT.html">Quotes and Thoughts</a>
+	<a href="quotesthoughts.html">Quotes and Thoughts</a>
 	<a href="bookreviews.html">Book Reviews</a>
     <a href="articles.html">Articles</a>
     <a href="profile.html">Profile</a>
