--- a/profile.html
+++ b/profile.html
@@ -172,7 +172,7 @@ a {
  
   <div class="header-right">
     <a href="index.html">Home</a>
-	<a href="QandT.html">Quotes and Thoughts</a>
+	<a href="quotesthoughts.html">Quotes and Thoughts</a>
 	<a href="bookreviews.html">Book Reviews</a>
     <a href="articles.html">Articles</a>
     <a class="active" href="profile.html">Profile</a>
