--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -164,16 +164,15 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
 	Indulging all the mixed emotions of life with fascinating context</span></span>
 	<br><br></b>
 	
-
+	<div class="containerimg">
+      <img src="imgs/2.jpg" style="width:300px;height:300px;">
+  </div>
+    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	
    	<div class="containerimg">
       <img src="imgs/1.jpg" style="width:300px;height:300px;">
   </div>
 	<hr style="height:1px;border-width:0;background-color:#ecb7bf">
-	
-	<br><div class="containerimg">
-      <img src="imgs/2.jpg" style="width:300px;height:300px;">
-  </div>
-    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 
 		<br><div class="containerimg">
       <img src="imgs/16.jpg" style="width:300px;height:300px;">
