--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -169,7 +169,7 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-   	<div class="containerimg">
+   	<br><div class="containerimg">
       <img src="imgs/1.jpg" style="width:300px;height:300px;">
   </div>
 	<hr style="height:1px;border-width:0;background-color:#ecb7bf">
