--- a/articles.html
+++ b/articles.html
@@ -210,17 +210,17 @@ Spread positivity? Want to inspire others through articles?</span>
    <span id="dots5"></span><span id="more5">
    I wonder what if we get everything we desire... without struggle, without hard work, without challenges, 
    and without sacrifices; some of us might take it as gold-born great but you would be weak, you won't be able
-   to showcase strength when the hard times come, when life disdains, and you would be fighting it without
+   to showcase strength when hard times hit, when life disdains, and you would be fighting it without
    knowing your strength, and said so you won't be able to grow without resistance. If you never had failures,
-   disappointments, setbacks, you won't come to know the true meaning of potential, courage, and compassion because 
-   these attributes are fired up when you see through how you grown through the struggle.
-   Don't curse the skies if you you go through tough world or struggling times, rather capitalize the opportunity
+   disappointments, setbacks, then the regret is you might never know the true meaning of potential, courage, and compassion because 
+   these attributes are fired up when you see through how you grow through the struggle.
+   Don't curse the skies if you run into struggling times rather capitalize the opportunity
    to thrive, and inspire others through it. You'll survive whatever is next. Next is a lesson. It'll make you
    stronger, it will teach you patience, it'll showcase your spirit. You came with a purpose, you'll find it if 
    you are committed to keep going. Your struggle is a chapter of your story. <br>
   <b> Pluck the petals of struggle,<br> The life would envy to blossom you and <br>
    Don't worry, if you pick a thorn;<br> Remember, the thorny stem.. later on<br>
-   produces the most magical roses.</b>
+   Produces the most magical roses.</b>
    
   </span>
   <br><button class ="buttonreadmore" onclick="myFunction5()" id="myBtn5">Read now</button></p>
