--- a/articles.html
+++ b/articles.html
@@ -227,9 +227,43 @@ Spread positivity? Want to inspire others through articles?</span>
 <br>
   
       <p id="borderimg1">
-  <b> <span style="font-size: 18px;"><u>Petals of Struggle</u></b></span> <br>by Anny S.(2)<br>
+  <b> <span style="font-size: 18px;"><u>The Time I Found The Secret to being Motivated 24x7</u></b></span> 
+  <br>by Bhavya Sinha<br>
    <span id="dots7"></span><span id="more7">
-   content
+   If you are like me, you would have multiple projects running side by side only to be abandoned after 
+   a few weeks. Everything seems too exciting but as soon as the excitement fades away, so does your 
+   inspiration for pursuing it. I thought I'd never change. But to my surprise I found a way to keep going
+   even when I knew that my motivation had run its course. Read on to find out what worked for me and maybe 
+   it could work for you too.
+<br>Step 1: The very first thing I did upon starting a new project was journal. The motivation right in that 
+moment is usually very high. You have all the reasons fresh in your head about why you're doing this. So it 
+makes total sense to write down your thoughts either on a piece of paper or online. 
+The reason why this helps is that next time when you feel like quitting, instead of spending hours on YouTube
+ watching motivational talks, you could read your own thoughts at the time. It will remind you of all the
+ reasons you decided to take up this project. After all, no one knows your story, ideas and purpose better
+ than you do. And so, the only person to motivate you enough to last till the end, is YOU.
+<br>Step 2: Practise consistency everyday. Now I know it seems like a daunting task but let me break it
+ down for you. 
+When we usually think about consistency, we think of habits such as waking up everyday at 6 am or going to 
+the gym every single day. But it doesn't have to be that way. We do not have to associate consistency with 
+an everyday practice Or at least, not at the beginning.
+For example, If you decide to go for a walk, thrice a week, and follow through, that would be consistency.
+ That is only 3 days out of 7 days
+But if you've ever struggled with self discipline, even 3 days could seem like a burden. So let's break it 
+down further.
+<br>Step 3: Combine your habit with something that you love
+In order to motivate yourself enough to go for that 3 day walk, combine it with something that you love.
+ If you like shopping and dressing up, you could go buy some cute sports top or some cool gym pants. 
+ Moreover, you could get yourself a nice water bottle and even a sweatband if you'd like. The idea here 
+ is that you should have some level of excitement because you have something to look forward to. In our 
+ case, here it was new clothes.
+Another example could be learning a new instrument. If you want to learn a new instrument but struggle
+ to find the energy to start, or even to pick it up after the first class, come up with maybe a reward system,
+ like an episode of your favourite show or a glass of your favourite beverage. So as soon as your finish your
+ guitar lesson, or practise session, you could reward yourself with some of your favourite shows or with some
+ freshly squeezed juice. Talk about a win-win!
+So to sum up, write down your thoughts when you are excited about your new habit/project, practise consistency
+ in small bits and combine your new habit/project with something that you love.
   </span>
   <br><button class ="buttonreadmore" onclick="myFunction7()" id="myBtn7">Read now</button></p>
 <br>
