--- a/articles.html
+++ b/articles.html
@@ -248,8 +248,7 @@ When we usually think about consistency, we think of habits such as waking up ev
 the gym every single day. But it doesn't have to be that way. We do not have to associate consistency with 
 an everyday practice Or at least, not at the beginning.
 For example, If you decide to go for a walk, thrice a week, and follow through, that would be consistency.
- That is only 3 days out of 7 days
-But if you've ever struggled with self discipline, even 3 days could seem like a burden. So let's break it 
+ That is only 3 days out of 7 days. But if you've ever struggled with self discipline, even 3 days could seem like a burden. So let's break it 
 down further.
 <br>Step 3: Combine your habit with something that you love
 In order to motivate yourself enough to go for that 3 day walk, combine it with something that you love.
