--- a/bookreviews.html
+++ b/bookreviews.html
@@ -343,7 +343,7 @@ The narrative starts from Sachin's childhood and travels through his glorious mo
 <div class="main">
   <center>
 	<div class="containerimg">
-      <img src="imgs/bhavya.jpeg" style="width:125px;height:125px;">
+      <img src="imgs/bhavyasinha.jpeg" style="width:125px;height:125px;">
 	 <div class="inbox">
   <img src="imgs/blubg.jpg" style="width:125px;height:25px;">
   <div class="centered"><h5>Bhavya Sinha</h5></div>
