--- a/articles.html
+++ b/articles.html
@@ -211,13 +211,14 @@ Spread positivity? Want to inspire others through articles?</span>
    I wonder what if we get everything we desire... without struggle, without hard work, without challenges, 
    and without sacrifices; some of us might take it as gold-born great but you would be weak, you won't be able
    to showcase strength when hard times hit, when life disdains, and you would be fighting it without
-   knowing your strength, and said so you won't be able to grow without resistance. If you never had failures,
-   disappointments, setbacks, then the regret is you might never know the true meaning of potential, courage, and compassion because 
+   knowing your strength, and said so you couldn't grow without resistance. If you never had failures,
+   disappointments, setbacks, then regret is you might never know the true meaning of potential, courage, and compassion because 
    these attributes are fired up when you see through how you grow through the struggle.
    Don't curse the skies if you run into struggling times rather capitalize the opportunity
    to thrive, and inspire others through it. You'll survive whatever is next. Next is a lesson. It'll make you
-   stronger, it will teach you patience, it'll showcase your spirit. You came with a purpose, you'll find it if 
-   you are committed to keep going. Your struggle is a chapter of your story. <br>
+   stronger, it'll teach you patience, it'll showcase your spirit. You came with a purpose, you'll find it if 
+   you are committed to keep going. It'll all come good by the end and when it does
+	    you won't have just inspired yourself, you will have inspired so many others. Your struggle is a chapter of your story.<br>
   <b> Pluck the petals of struggle,<br> The life would envy to blossom you and <br>
    Don't worry, if you pick a thorn;<br> Remember, the thorny stem.. later on<br>
    Produces the most magical roses.</b>
