--- a/articles.html
+++ b/articles.html
@@ -217,7 +217,7 @@ Spread positivity? Want to inspire others through articles?</span>
    Don't curse the skies if you run into struggling times rather capitalize the opportunity
    to thrive, and inspire others through it. You'll survive whatever is next. Next is a lesson. It'll make you
    stronger, it'll teach you patience, it'll showcase your spirit. You came with a purpose, you'll find it if 
-   you are committed to keep going. It'll all come good by the end and when it does
+   you are committed to keep going. It'll all come good by the end and when it does,
 	    you won't have just inspired yourself, you will have inspired so many others. Your struggle is a chapter of your story.<br>
   <b> Pluck the petals of struggle,<br> The life would envy to blossom you and <br>
    Don't worry, if you pick a thorn;<br> Remember, the thorny stem.. later on<br>
